--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,3 +7,49 @@
   font-size: 24px;
   color: #333;
 }
+
+.header__row {
+  display: flex;
+  column-gap: 30px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__logo {
+  display: flex;
+  align-items: center;
+  column-gap: 13px;
+}
+
+.header__logo span {
+  font-size: 40px;
+  font-weight: 900;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.header__nav {
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 1.5;
+  letter-spacing: 0.01em;
+}
+
+.header__nav ul {
+  display: flex;
+  column-gap: 65px;
+  align-items: center;
+}
+
+.header__nav-btn {
+  padding: 13px 22px 17px;
+  font-weight: 500;
+  background-color: var(--textColor);
+  border-radius: 8px;
+  font-size: 24px;
+  line-height: 1.5;
+  letter-spacing: 0.01em;
+  color: #fff;
+  transition: background-color 0.3s ease;
+}
