--- a/src/components/promo/promo.css
+++ b/src/components/promo/promo.css
@@ -8,8 +8,8 @@
   padding-top: 68px;
   padding-left: 120px;
 
-  boder-radius: 8px;
-  bground-color: #f4f6f5;
+  border-radius: 59px;
+  background-color: #f4f6f5;
 }
 
 .promo__text {
@@ -35,6 +35,7 @@
 }
 
 .promo__desc {
+  margin-bottom: 32px;
   font-weight: 400;
   font-size: 32px;
   line-height: 1.5;
@@ -44,34 +45,29 @@
 
 .promo__btn-wrapper {
   display: flex;
-  column-gap: 30px;
+  column-gap: 34px;
   /* justify-content: center; */
   align-items: center;
-  margin-top: 40px;
+  /* margin-top: 40px; */
 }
 
 .promo__btn-wrapper::before {
   content: "";
-  display: block;
-  z-index: -1;
-  right: 0px;
-  bottom: 0px;
+  display: inline-block;
   width: 190px;
   height: 32px;
 
   background-image: url("./../../img/icons/decor-yellow.svg");
-  background-repeat: no-repeat;
 }
 .promo__btn {
   padding: 18px 40px;
   font-weight: 500;
   background-color: var(--textColor);
   border-radius: 10px;
-  font-size: 24px;
+  font-size: 30px;
   line-height: 1.5;
-  letter-spacing: 0.01em;
+  letter-spacing: -0.05em;
   color: #fff;
-  transition: background-color 0.3s ease;
 }
 
 .highlight {
@@ -84,11 +80,20 @@
   display: block;
   position: absolute;
   top: -12px;
-  bottom: -12px;
-  left: -20px;
-  right: -60px;
-  width: 100%;
-  height: 1px;
+  bottom: 0px;
+  left: -40px;
+  right: -160px;
+
   background-color: #ffff;
-  margin-bottom: 10px;
+  transform: rotate(-2deg);
+}
+
+.highlight span {
+  position: relative;
+  z-index: 1;
+}
+
+.highlight--yellow::before {
+  background-color: var(--yellow);
+  right: -110px;
 }
