--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -1,4 +1,54 @@
 .card {
+  position: relative;
+  width: 100%;
+  max-width: 400px;
+  padding: 30px;
+  background-color: var(--white);
+  border-radius: 20px;
+  box-shadow: var(--shadow);
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+.card:hover .card__img {
+  animation: opacity 0.2s ease-in-out;
+  transform: scale(1.05);
+  transform: translateY(-10px);
+  box-shadow: var(--shadow-hover);
+}
+
+@keyframes opacity {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.card:hover .card__icon {
+  animation: slide 0.5s ease-in-out;
+}
+
+@keyframes slide {
+  0% {
+    left: 0;
+  }
+  50% {
+    left: -20px;
+  }
+  100% {
+    left: 0;
+  }
+}
+
+.card__link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
 
 .card__img {
@@ -26,4 +76,7 @@
   line-height: 2.08;
   letter-spacing: -0.04em;
   color: var(--gray);
+}
+.card__icon {
+  position: relative;
 }
